Bug 1561586 - Align message header with dismiss button for CFR bookmark panel message r=r1cky
Differential Revision: https://phabricator.services.mozilla.com/D36006

UltraBlame original commit: 921c89bebafeba5c44cb5bc0dc97d8ebc7541f6f

--- a/browser/themes/shared/places/editBookmarkPanel.inc.css
+++ b/browser/themes/shared/places/editBookmarkPanel.inc.css
@@ -311,19 +311,6 @@ none
 ;
 }
 #
-editBookmarkPanelRecommendation
->
-div
-h1
-{
-max
--
-width
-:
-215px
-;
-}
-#
 editBookmarkPanelRecommendationTitle
 {
 font
@@ -347,16 +334,8 @@ height
 25
 ;
 margin
--
-bottom
 :
-6px
-;
-padding
--
-top
-:
-2px
+0
 ;
 }
 #
@@ -449,28 +428,54 @@ underline
 }
 #
 editBookmarkPanelRecommendation
-#
-cfrClose
+.
+cfrMessageHeader
 {
-position
+display
 :
-absolute
+flex
 ;
-padding
+justify
+-
+content
+:
+space
+-
+between
+;
+align
+-
+items
+:
+start
+;
+margin
+-
+bottom
+:
+6px
+;
+margin
+-
+top
 :
 10px
 ;
-inset
+padding
 -
-inline
--
-end
-:
-8px
-;
 top
 :
-15px
+2px
+;
+}
+#
+editBookmarkPanelRecommendation
+#
+cfrClose
+{
+padding
+:
+10px
 ;
 width
 :
